--- a/src/app/usage-guidelines/usage-guidelines.component.html
+++ b/src/app/usage-guidelines/usage-guidelines.component.html
@@ -37,11 +37,11 @@
                 </div>
                 <div class="row">
                     <div class="col">
-                        <h5 style="text-align:center">Send a DM or @ to:</h5>
-                        <h5 style="text-align:center"><a href="https://twitter.com/NimbatColony">@NimbatColony</a></h5>
-                        <h5 style="text-align:center"><a href="https://twitter.com/PureOfHeartlin">@PureOfHeartlin</a>
+                        <h5 style="text-align:center">Send a DM or &#64; to:</h5>
+                        <h5 style="text-align:center"><a href="https://twitter.com/NimbatColony">&#64;NimbatColony</a></h5>
+                        <h5 style="text-align:center"><a href="https://twitter.com/PureOfHeartlin">&#64;PureOfHeartlin</a>
                         </h5>
-                        <h5 style="text-align:center"><a href="https://twitter.com/AmpFrequency">@AmpFrequency</a></h5>
+                        <h5 style="text-align:center"><a href="https://twitter.com/AmpFrequency">&#64;AmpFrequency</a></h5>
                     </div>
                     <div class="col">
                         <h5 style="text-align:center">Send a message to:</h5>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="col">
                         <h5 style="text-align:center">Send an Email to:</h5>
-                        <h5 style="text-align:center"><a href="mailto:NimbatColony@gmail.com">NimbatColony@gmail.com</a>
+                        <h5 style="text-align:center"><a href="mailto:NimbatColony@gmail.com">NimbatColony&#64;gmail.com</a>
                         </h5>
                     </div>
                 </div>
@@ -80,7 +80,7 @@
                 <div class="col-5">
                     <h4 style="text-align:end">Finn Heartlin</h4>
                     <h6 style="text-align:end"><a
-                            href="https://twitter.com/PureOfHeartlin">@PureOfHeartlin</a>
+                            href="https://twitter.com/PureOfHeartlin">&#64;PureOfHeartlin</a>
                     </h6>
                     <h6 style="text-align:end">Lead Designer</h6>
                     <h5 style="text-align:end">Finn's a communications student based out of New England, </h5>
@@ -101,7 +101,7 @@
                 <div class="col-5">
                     <h4>Frequency</h4>
                     <h6><a
-                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fampfrequency&sa=D&sntz=1&usg=AOvVaw02q19DabwsFBehH9gteubi">@AmpFrequency</a>
+                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Fampfrequency&sa=D&sntz=1&usg=AOvVaw02q19DabwsFBehH9gteubi">&#64;AmpFrequency</a>
                     </h6>
                     <h6>Lead Writer</h6>
                     <h5>Frequency's a biology student from the Midwest,</h5>
@@ -112,7 +112,7 @@
                 <div class="col-5">
                     <h4 style="text-align:end">Takeo</h4>
                     <h6 style="text-align:end"><a
-                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">@tak_eo</a>
+                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">&#64;tak_eo</a>
                     </h6>
                     <h6 style="text-align:end">Lead Artist</h6>
                     <h5 style="text-align:end">Part-time artist; Full-time problem.</h5>
@@ -132,7 +132,7 @@
                 <div class="col-5">
                     <h4>Arcfire</h4>
                     <h6><a
-                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2FArcfireFox&sa=D&sntz=1&usg=AOvVaw3FDfgw0XzOgWV_r4316WiI">@ArcfireFox</a>
+                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2FArcfireFox&sa=D&sntz=1&usg=AOvVaw3FDfgw0XzOgWV_r4316WiI">&#64;ArcfireFox</a>
                     </h6>
                     <h6>Lead Web Developer</h6>
                     <h5>Foxy menace stuck in the Southwest,</h5>
