--- a/src/app/visitants/visitants.component.html
+++ b/src/app/visitants/visitants.component.html
@@ -5,55 +5,26 @@
         </mat-card-title>
         <mat-card-content>
             <hr>
-            <h5>There are other non-Nimbats that are a part of the Colony. They’re mostly male, though females and other
-                genders have been witnessed, and have been here for varying amounts of time. Some have merely visited
-                and left intermittently, while others have resided here much longer than I have. It seems that a strong
+            <h5>There are other non-Nimbats that are a part of the Colony. Visitants span the gender spectrum, and the
+                interviewed Visitants have been about the Colony for a wide array of time. Some have merely visited and
+                left intermittently, while others have resided here much longer than I have. It seems that a strong
                 pillar of Nimbat ideology is the introduction and potential incorporation of others into the Colony.
                 When a Nimbat goes out into the world and finds someone that catches their interests, they may escort
-                them back to the Colony itself. </h5>
+                them back to the Colony itself.</h5>
             <h5 class="notes">"A number of other Nimbats refer to the one who brings a non-Nimbat here as an “Advocate”,
-                and said non-Nimbats like myself their “Visitant”. My own Advocate, ██████, told me about how they’re
-                responsible for my actions. If a Visitant has ill-natured intentions or practices malice in the Colony,
-                they are exiled, and the Advocate faces some repercussions. They wouldn’t tell me the details."</h5>
+                and said non-Nimbats like myself are their “Visitant”. My own Advocate, ██████, told me about how
+                they’re responsible for my actions. If a Visitant has ill-natured intentions or practices malice in the
+                Colony, they are exiled, and the Advocate faces some repercussions. They wouldn’t tell me the details."
+            </h5>
             <h5>Upon arrival, the Advocate escorts the Visitant to at least one Council member to introduce them
                 personally while the rest are introduced by secondary means. Many Visitants come only for a few days,
                 and choose to leave. However, there are a few that choose to stay. Upon that decision, the Advocate
-                begins a ritual to fully accept them into the Colony. While Visitants are free to do as they wish so
-                long that it assists the Colony, it seems most are compelled to become breeders. I’m not completely sure
-                why, but most Nimbats prefer to mate with Visitant breeders over their own species. I assume this is in
-                an effort to diversify the gene pool, though I must admit I’m not so certain of this.<br />
-                If a Visitant wishes to become a breeder, the Advocate accompanies them to an impressively methodical
-                ceremony. The Visitant is marked by their Advocate’s magic–or an attendee if the Advocate cannot
-                provide, which causes a sort of “brand” or “rune” to appear on their bodies. For those with male
-                genitalia, this rune appears across their scrotum. For those with female genitalia, it manifests on
-                their pelvis, where the womb would be. For those with both, it is often left to the choice of the
-                Visitant.<br />
-                This rune seems to have two purposes.. For one, the magic nature of the rune significantly increases the
-                virility of those who are marked with it. Semen and sperm production accelerates, often leading to more
-                copious volumes during ejaculation. Females tend to become more fertile, and when bred by Colony
-                members, tend to have a larger number of offspring. The rune itself seems to represent the Colony’s
-                layout, as the design has an uncanny resemblance.<br />
-                Additionally, it is a sign of pride for the breeder. The rune seems to shift and develop as a Visitant
-                breeder spends more time in the Colony. Based on my observations, this rune changes based on two
-                indicators: metric and merit. Metric, for the number of actual offspring produced, and merit for being a
-                “good lay.” While a Visitant breeder can rely entirely on one system, the highest growth tends to favor
-                those that provide in both. The actual qualifying “amounts” seem to be more on a relative scale than an
-                actual measured scale. <br /></h5>
-            <h5 class="notes">
-                "I’ve catalogued seven “ranks” of rune development, which have been archived on the <a
-                    routerLink="visitant-runes" class="notes">Visitant Runes</a> page."</h5>
-            <h5>Returning to the ceremony, the Advocate (or attendee) imbues this rune on the visitant, before breeding
-                commences. The Advocate is granted the right to have the first turn with their Visitant, though they are
-                allowed to allow another in their stead if time conflicts with the Advocate. This allows the Nimbat and
-                their partner to grow closer through a more intimate means while introducing the new breeder what
-                they’re in for. This is a semi-public ceremony with options for more private preferences, taking place
-                in a fairly isolated room in the interior of Flight Proliferation’s working base. This room features
-                little more than a bedding, a window, and a few containers filled with food and sealed cups of water to
-                maintain one’s energy levels, while a few empty containers can be used to store the Visitant’s
-                belongings. The door itself is to remain closed, but usually, other Nimbats working in Flight
-                Proliferation observe the breeding taking place. Sometimes, they may opt to have a turn after the
-                Advocate has finished, and the Visitant permits it. There is the option to maintain privacy, and allow
-                no observers during the process.</h5>
+                begins a ritual to fully accept them into the Colony. Visitants are free to do as they wish so long that
+                it assists the Colony, and most choose to join a Flight to work what is close to a traditional job.
+                These can be anything from assisting with construction or hauling (which is quite useful, since Nimbats
+                do tend to be of shorter stature) to recordkeeping. Nimbats are often seen fraternizing with Visitants,
+                including the Visitants of other Advocates. It seems they quickly become part of the colony
+                itself.</h5>
         </mat-card-content>
     </mat-card>
 </div>
