--- a/src/app/preservation/preservation.component.html
+++ b/src/app/preservation/preservation.component.html
@@ -17,13 +17,13 @@
         <div class="container">
           <div class="row">
               <div class="col">
-                  <h4 style="text-align:center;">Conservation</h4>
+                  <h4 style="text-align:center;">Forestry</h4>
               </div>
               <div class="col">
-                  <h4 style="text-align:center;">Infrastructure</h4>
+                  <h4 style="text-align:center;">Scribing</h4>
               </div>
               <div class="col">
-                  <h4 style="text-align:center;">Agriculture</h4>
+                  <h4 style="text-align:center;">Maintenance</h4>
               </div>
           </div>
       </div>
