--- a/src/app/production/production.component.html
+++ b/src/app/production/production.component.html
@@ -1,19 +1,25 @@
 <div class="container-fluid">
     <mat-card>
-        <mat-card-title>
-            <h3 style="text-align:center">Flight Production</h3>
-        </mat-card-title>
-        <mat-card-content>
-            <h5>
-                <div style="text-align:center"><img
-                        style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px"
-                        src="assets/production.png"></div>
-                <br>
-                Flight Production is focused entirely on making sure the colony has the materials they need to continue
-                on. Whether it be food or tools, the nimbats in Production are the craftsbattes, miners, loggers, and
-                farmers that keep the whole colony moving together.
-            </h5>
-        </mat-card-content>
+        <div class="row">
+            <div class="col-md-2 offset-md-4">
+                <mat-card-title>
+                    <h3 style="text-align:right">Flight Production</h3>
+                </mat-card-title>
+                <h6 style="text-align:justify">
+                    Flight Production is focused entirely on making sure the colony has the materials they need to continue
+                    on. Whether it be food or tools, the nimbats in Production are the craftsbattes, miners, loggers, and
+                    farmers that keep the whole colony moving together.
+                </h6>
+            </div>
+            <div class="col-md-6">
+                <h5>
+                    <div style="text-align:left"><img
+                            style="width: 30%; height: auto;margin-top: 15px;margin-bottom: 15px"
+                            src="assets/production.png"></div>
+                    <br>
+                </h5>
+            </div>
+        </div>
     </mat-card>
     <br>
     <mat-card>
@@ -71,25 +77,35 @@
     </mat-card>
     <br>
     <mat-card>
-        <mat-card-title>
-            <h3 style="text-align:center">Carolyn, Flight Production Elder</h3>
-            <div style="text-align:center"><img
-                style="width: 20%; height: auto;margin-top: 15px;margin-bottom: 15px"
-                src="assets/elders/carolyn.png"></div>
-        </mat-card-title>
+        <div class="row">
+            <div class="col-md-3 offset-md-3">
+                <mat-card-title>
+                    <h3 style="text-align:right">Carolyn, Flight Production Elder</h3>
+                </mat-card-title>
+                <h5 style="text-align:justify" class="notes">
+                    “The Elder of Production is not often spoke of by others, not as a matter of distaste but rather a
+                    matter of feeling slightly overwhelmed. Carolyn is passionate, to say the least. They say that once,
+                    when she was a kit, she got lost in the North in an adventure on her own, and returned to the Colony
+                    years later with a bear skin draped across her shoulders and a barrel of beer under her arm. Despite
+                    this harrowing description, she is a very loving sort. Quite the hugger, too—if I didn’t have the air to
+                    voice my complaint, she might’ve destroyed my ribs. Her loving nature is juxtaposed with her rough hand,
+                    which explains her bulkier frame. Mechanic, smith, sometimes an engineer, and sometimes a drinking
+                    champion, the only muscle larger than those in her arms and legs is her heart, which only means she’s
+                    more likely to lift you up in a hug! Also, don’t bother asking her about the leg. She changes the story
+                    every time you ask.”
+                </h5>
+                
+            </div>
+            <div class="col-md-6">
+                <h5>
+                    <img style="width: 45%; height: auto;margin-top: 15px;margin-bottom: 15px"
+                    src="assets/elders/carolyn.png">
+                    <br>
+                </h5>
+            </div>
+        </div>
         <mat-card-content>
-            <h5 class="notes">
-                “The Elder of Production is not often spoke of by others, not as a matter of distaste but rather a
-                matter of feeling slightly overwhelmed. Carolyn is passionate, to say the least. They say that once,
-                when she was a kit, she got lost in the North in an adventure on her own, and returned to the Colony
-                years later with a bear skin draped across her shoulders and a barrel of beer under her arm. Despite
-                this harrowing description, she is a very loving sort. Quite the hugger, too—if I didn’t have the air to
-                voice my complaint, she might’ve destroyed my ribs. Her loving nature is juxtaposed with her rough hand,
-                which explains her bulkier frame. Mechanic, smith, sometimes an engineer, and sometimes a drinking
-                champion, the only muscle larger than those in her arms and legs is her heart, which only means she’s
-                more likely to lift you up in a hug! Also, don’t bother asking her about the leg. She changes the story
-                every time you ask.”</h5>
-            <h5>
+            
                 <div class="container">
                     <div class="row">
                         <div class="col">
@@ -116,7 +132,6 @@
                             Mack's description goes here.</div>
                     </div>
                 </div>
-            </h5>
         </mat-card-content>
     </mat-card>
 </div>
