--- a/src/app/production/production.component.html
+++ b/src/app/production/production.component.html
@@ -78,11 +78,11 @@
     <br>
     <mat-card>
         <div class="row">
-            <div class="col-md-3 offset-md-3">
+            <div class="col-md-5 offset-md-3">
                 <mat-card-title>
                     <h3 style="text-align:right">Carolyn, Flight Production Elder</h3>
                 </mat-card-title>
-                <h5 style="text-align:justify" class="notes">
+                <h5 style="text-align:right" class="notes">
                     “The Elder of Production is not often spoke of by others, not as a matter of distaste but rather a
                     matter of feeling slightly overwhelmed. Carolyn is passionate, to say the least. They say that once,
                     when she was a kit, she got lost in the North in an adventure on her own, and returned to the Colony
@@ -96,7 +96,7 @@
                 </h5>
                 
             </div>
-            <div class="col-md-6">
+            <div class="col-md-4">
                 <h5>
                     <img style="width: 45%; height: auto;margin-top: 15px;margin-bottom: 15px"
                     src="assets/elders/carolyn.png">
