fix prod and pres

--- a/src/app/production/production.component.html
+++ b/src/app/production/production.component.html
@@ -6,8 +6,10 @@
                     <h3 style="text-align:right">Flight Production</h3>
                 </mat-card-title>
                 <h6 style="text-align:justify">
-                    Flight Production is focused entirely on making sure the colony has the materials they need to continue
-                    on. Whether it be food or tools, the nimbats in Production are the craftsbattes, miners, loggers, and
+                    Flight Production is focused entirely on making sure the colony has the materials they need to
+                    continue
+                    on. Whether it be food or tools, the nimbats in Production are the craftsbattes, miners, loggers,
+                    and
                     farmers that keep the whole colony moving together.
                 </h6>
             </div>
@@ -87,51 +89,84 @@
                     matter of feeling slightly overwhelmed. Carolyn is passionate, to say the least. They say that once,
                     when she was a kit, she got lost in the North in an adventure on her own, and returned to the Colony
                     years later with a bear skin draped across her shoulders and a barrel of beer under her arm. Despite
-                    this harrowing description, she is a very loving sort. Quite the hugger, too—if I didn’t have the air to
-                    voice my complaint, she might’ve destroyed my ribs. Her loving nature is juxtaposed with her rough hand,
+                    this harrowing description, she is a very loving sort. Quite the hugger, too—if I didn’t have the
+                    air to
+                    voice my complaint, she might’ve destroyed my ribs. Her loving nature is juxtaposed with her rough
+                    hand,
                     which explains her bulkier frame. Mechanic, smith, sometimes an engineer, and sometimes a drinking
-                    champion, the only muscle larger than those in her arms and legs is her heart, which only means she’s
-                    more likely to lift you up in a hug! Also, don’t bother asking her about the leg. She changes the story
+                    champion, the only muscle larger than those in her arms and legs is her heart, which only means
+                    she’s
+                    more likely to lift you up in a hug! Also, don’t bother asking her about the leg. She changes the
+                    story
                     every time you ask.”
                 </h5>
-                
+
             </div>
             <div class="col-md-4">
                 <h5>
                     <img style="width: 45%; height: auto;margin-top: 15px;margin-bottom: 15px"
-                    src="assets/elders/carolyn.png">
+                        src="assets/elders/carolyn.png">
                     <br>
                 </h5>
             </div>
         </div>
         <mat-card-content>
-            
-                <div class="container">
-                    <div class="row">
-                        <div class="col">
-                            <h4 style="text-align:center;">Kara</h4>
-                            <h6 style="text-align:center;">Agriculture Sect Leader</h6>
-                        </div>
-                        <div class="col">
-                            <h4 style="text-align:center;">Vivianne</h4>
-                            <h6 style="text-align:center;">Metallurgy Sect Leader</h6>
-                        </div>
-                        <div class="col">
-                            <h4 style="text-align:center;">Mack</h4>
-                            <h6 style="text-align:center;">Handicraft Sect Leader</h6>
-                        </div>
+
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                        <h4 style="text-align:center;">Kara</h4>
+                        <h6 style="text-align:center;">Agriculture Sect Leader</h6>
+                    </div>
+                    <div class="col">
+                        <h4 style="text-align:center;">Vivianne</h4>
+                        <h6 style="text-align:center;">Metallurgy Sect Leader</h6>
+                    </div>
+                    <div class="col">
+                        <h4 style="text-align:center;">Mack</h4>
+                        <h6 style="text-align:center;">Handicraft Sect Leader</h6>
                     </div>
                 </div>
-                <div class="container">
-                    <div class="row">
-                        <div class="col notes" style="text-align:justify">
-                            Kara's description goes here.</div>
-                        <div class="col notes" style="text-align:justify">
-                            Vivianne's description goes here.</div>
-                        <div class="col notes" style="text-align:justify">
-                            Mack's description goes here.</div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col notes" style="text-align:justify">
+                        “Kara is the Colony’s foremost authority on phytomancy and herbology. Her power and knowledge
+                        with this specific set of skills, magical or otherwise, can often be seen weaved through her day
+                        to day existence. Even the very grass she walks tends to grow quicker. She can often be found
+                        walking about the farmlands, directing and educating workers on nurturing and extracting various
+                        crops while she lets her magic weave in and amplify the harvest and its yield. She wears a
+                        poncho made of woven string, which was given to her by her Visitant that had passed away years
+                        ago. To this day, Kara still speaks of them quite lovingly.”
+                    </div>
+                    <div class="col notes" style="text-align:justify">
+                        “Perception can sometimes take different shapes and forms. Some Nimbats here know echolocation,
+                        others can see souls and read minds, and others still can feel the weave of nature itself in
+                        every corner. Vivianne is a rare type, picking up a kind of talent that might have been useless
+                        in ages past, when the utilization of metal was not very common. Some scholars in the Colony
+                        believe that talents like her ability to pick up electromagnetic and ferromagnetic signals from
+                        the planet and the objects on it could be a sign of encroaching evolution. Or maybe, magic is
+                        just that flexible. Whatever it’s worth, the feline working in Metallurgy is a bit of a sassy
+                        sort, carrying herself around like she’s the very gold of the earth, and only reciprocative when
+                        someone seems to believe it. In essence, if you’re nice to her on default, she’s nice to you,
+                        usually. Curiously, Vivianne is blind in both eyes, meaning that her ability to sense magnetism
+                        and natural magnetic fields is her only real way of seeing. It also gives her an astounding
+                        skill in dictating the particles of certain metals, so she could use alchemical processes to
+                        transmute.”
+                    </div>
+                    <div class="col notes" style="text-align:justify">
+                        “Perhaps one of the things that makes the crafting sect of the Production Flight a more
+                        welcoming experience is that it’s host to a multitude of Nimbats led and guided by a soul who
+                        often treats his subordinates with a kindly, fatherly disposition. Mac is a hard-at-work dad,
+                        and judging by his looks, one could most certainly make such a guess. Of course, he’s frequently
+                        talking about his kids, and one work shift with him could turn into a splurge of photos and
+                        stories, yet it’s hard not to smile at how actually compassionate he is. The only sore item of
+                        note is his severely-damaged wings. They stay tucked in most of the time, for the entire
+                        structure has been singed and torn in places, making flight impossible for him. In spite of
+                        this, he proves to be one of the heartiest Nimbats in the Colony.”
                     </div>
                 </div>
+            </div>
         </mat-card-content>
     </mat-card>
 </div>
