--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -85,18 +85,11 @@
             </div>
             <span class="spacer"></span>
         </mat-toolbar-row>
-        <mat-toolbar-row style="background-color: #ed2d47;">
-            <div class="col-12">
-                <h5 style="text-align:center">Our latest Colony Chronicle is now live! Read "Year Round", by
-                    Frequency <a routerLink="year-round">here</a>!
-                </h5>
-            </div>
-        </mat-toolbar-row>
     </mat-toolbar>
 </div>
 <div style="background-color: #e6b8a2; color: #633d2c; padding-top: 1%">
-    <div style="min-height: 81.5vh"><router-outlet></router-outlet></div>
-    <footer class="container-fluid" style="background-color: #ddab92">
+    <div style="min-height: 85vh"><router-outlet></router-outlet></div>
+    <footer class="container" style="background-color: #ddab92">
         <div class="row">
             <div class="col-sm-6">
                 <h6><small>The Nimbat species design is copyright Dean Dodrill, and originate from Dust: An Elysian
@@ -116,7 +109,7 @@
                             the development on
                             Bluesky!</a></small></h6>
                 <h6 style="text-align:end"><small><a routerLink="/usage-guidelines">Logos and Lore Usage Guidelines
-                        </a>- <a href="">Changelog</a></small></h6>
+                        </a></small></h6>
             </div>
         </div>
     </footer>
