--- a/src/app/colony-culture/colony-culture.component.html
+++ b/src/app/colony-culture/colony-culture.component.html
@@ -17,7 +17,7 @@
         <mat-card-content>
             <hr>
             <div style="text-align:center"><img style="width: 25%; height: 10%;text-align:right;display: inline;vertical-align: top;" src="assets/media icon.png"></div>
-            <h6 style="text-align:center">Art by our very own Takeo!</h6>
+            <h6 style="text-align:center">Art by our very own Astrodyne!</h6>
             <h6 style="text-align:center">From top left, going clockwise: Rosmerta (Proliferation), Katell (Preservation), Brianna (Progression), Eislyn (Protection), and Jena (Populace)</h6>
             <hr>
             <h5>The Colony itself, again, is matriarchal. At the helm of the entire operation sit five elder Nimbats, each of which lead their own Flight. The Council does not represent a unifying authority body, but it does allow each Flight to coordinate at the deepest level in order to make executive decisions for the Colony as needed. Otherwise, the Council keeps a sense of direction for each Flight, and maintains the operation at large.</h5>
