--- a/src/app/usage-guidelines/usage-guidelines.component.html
+++ b/src/app/usage-guidelines/usage-guidelines.component.html
@@ -110,17 +110,17 @@
             </div>
             <div class="row">
                 <div class="col-5">
-                    <h4 style="text-align:end">Takeo</h4>
+                    <h4 style="text-align:end">Astrodyne</h4>
                     <h6 style="text-align:end"><a
-                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">&#64;tak_eo</a>
+                            href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">&#64;Astrodyne</a>
                     </h6>
                     <h6 style="text-align:end">Lead Artist</h6>
                     <h5 style="text-align:end">Part-time artist; Full-time problem.</h5>
                 </div>
                 <div class="col-1">
-                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/developer-profiles/takeo.png"></div>
+                    <div style="text-align:center"><img style="width: 100%; height: auto;" src="assets/developer-profiles/astrodyne.png"></div>
                     <h6 style="text-align:end"><small style="font-size:0.75rem;">Art by <a
-                                href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">Takeo</a></small>
+                                href="https://www.google.com/url?q=https%3A%2F%2Ftwitter.com%2Ftak__eo&sa=D&sntz=1&usg=AOvVaw3J8ltDLiYWSao-1EJHQQa3">Astrodyne</a></small>
                     </h6>
                 </div>
                 <div class="col-1">
