--- a/src/app/usage-guidelines/usage-guidelines.component.scss
+++ b/src/app/usage-guidelines/usage-guidelines.component.scss
@@ -22,11 +22,11 @@
     background-position-y: center;
 }
 
-.takeo {
+.astrodyne {
     width: 100%;
     height: 20vh;
     border: 1px solid white;
-    background-image: url(../../assets/developer-profiles/takeo.png);
+    background-image: url(../../assets/developer-profiles/astrodyne.png);
     background-size: 300%;
     background-position-x: left;
     background-position-y: top;
