--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-// /* You can add global styles to this file, and also import other style files */
+// __<<ngM2ThemingMigrationEscapedComment0>>__
 @use '@angular/material' as mat;
 
 @import "../node_modules/bootstrap/scss/bootstrap";
